--- a/Day-2 Task/index.html
+++ b/Day-2 Task/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="styles.css"> 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <title>Travel Agency</title>
 </head>
@@ -38,10 +38,10 @@
             <!--img src="house.jpeg" alt="Service 1">
             <img src="food.jpeg" alt="Service 2"-->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Zcx247sfxPM?si=QjaRLbm_9evpaFg6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>
-            <!-- Add more service images as needed -->
+           
         </div>
     </section>
-    <h2 style="text-align: center;">Our Services</h2>
+    <h2 style="text-align: center;">Services</h2>
     <section id="carousel">
        
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -99,7 +99,6 @@
             <p>"Excellent service and attention to detail. Will definitely book with them again!"</p>
             <p class="user">- Jane Smith</p>
         </div>
-        <!-- Add more testimonials as needed -->
     </section>
 
     <section id="booking">
