--- a/HTML,CSS/index.html
+++ b/HTML,CSS/index.html
@@ -1,3 +1,7 @@
+<!----- Title :Travel agency webiste
+Author :Saranya R
+create date :18-03-2024
+last modified:27-04-2024----------->
 <!DOCTYPE html>
 <html lang="en">
 <head>
